# spellbound

./: .travis.yml  Cargo.toml  README.md  appveyor.yml
src/: lib.rs  mac.rs  main.rs  unix.rs  win.rs
