[package]
name = "spellbound"
version = "0.1.0"
authors = ["Andy Russell <arussell123@gmail.com>"]
edition = "2018"

[target.'cfg(target_os="macos")'.dependencies]
cocoa = "0.20.0"

[target.'cfg(windows)'.dependencies.winapi]
version = "0.3"
features = ["combaseapi", "objbase", "spellcheck"]

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
hunspell-sys = "0.1.3"

[dependencies]
cfg-if = "0.1.6"
lazy_static = "1.3.0"
